# toolz

./: .binstar.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  conda.yaml  pyproject.toml  pyrightconfig.json  release-notes  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: pre-commit.yml  publish_pypi.yml  pyright.yml  test.yml
bench/: test_curry.py  test_curry_baseline.py  test_first.py  test_first_iter.py  test_frequencies.py  test_get.py  test_get_list.py  test_groupby.py  test_join.py  test_memoize.py  test_memoize_kwargs.py  test_pluck.py  test_rolling_partition.py  test_sliding_window.py  test_wordcount.py
conda.recipe/: bld.bat  build.sh  meta.yaml
debian/: changelog  control  copyright
doc/: Makefile  make.bat  requirements.txt
doc/source/: api.rst  composition.rst  conf.py  control.rst  curry.rst  dicttoolz.rst  functoolz.rst  heritage.rst  index.rst  install.rst  itertoolz.rst  laziness.rst  parallelism.rst  purity.rst  references.rst  streaming-analytics.rst  tips-and-tricks.rst
examples/: fib.py  graph.py  wordcount.py
tlz/: __init__.py  _build_tlz.py
toolz/: __init__.py  _signatures.py  _tlz.py  _version.py  compatibility.py  curried.py  curried_exceptions.py  dicttoolz.py  exceptions.py  functoolz.py  iterrecipes.py  itertoolz.py  objtoolz.py  recipes.py  utils.py
toolz/curried/: __init__.py  core.py  exceptions.py  operator.py
toolz/dicttoolz/: __init__.py  core.py
toolz/dicttoolz/tests/: test_core.py
toolz/functoolz/: __init__.py  core.py
toolz/functoolz/tests/: test_core.py
toolz/itertoolz/: __init__.py  core.py  recipes.py
toolz/itertoolz/tests/: test_core.py  test_recipes.py
toolz/parallel/: core.py  reducers.py
toolz/parallel/tests/: test_core.py  test_reducers.py  test_reducers_parallel.py
toolz/sandbox/: __init__.py  core.py  functoolz.py  parallel.py
toolz/sandbox/tests/: test_core.py  test_functoolz.py  test_objtoolz.py  test_parallel.py
toolz/tests/: dont_test_multiprocessing.py  py3_functoolz.py  test_compatibility.py  test_curried.py  test_dicttoolz.py  test_functoolz.py  test_inspect_args.py  test_iterrecipes.py  test_itertoolz.py  test_multiprocessing.py  test_objtoolz.py  test_recipes.py  test_serialization.py  test_signatures.py  test_tlz.py  test_utils.py
